# checkdoc

./: README.md  pyproject.toml
.github/workflows/: publish_pypi.yml
checkdoc/: __init__.py
